--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -10,8 +10,8 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
-    <div class="container mt-4">
+<body style="margin-top: 4rem;">
+    <div style="width: 30%;" class="container mt-4">
         <h1>Adicionar Produto</h1>
 
         <form asp-action="Create" method="post">
