--- a/Views/Product/Delete.cshtml
+++ b/Views/Product/Delete.cshtml
@@ -12,11 +12,11 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
-    <div class="container mt-4">
+<body style="margin-top: 4rem;">
+    <div style="width: 30%;" class="container mt-4">
         <h1>Tem certeza que deseja excluir o produto?</h1>
 
-        <div>
+        <div style="margin: 1rem 0;">
             <strong>Nome:</strong> @Model.Name <br />
             <strong>Preço:</strong> @Model.Price <br />
         </div>
